@@ -50,11 +50,13 @@ int handle_trickle(MSG_FROM_HOST &mfh) {
   bool got_progress = false;
   bool got_wu_name = false;
   bool got_total_speed = false;
+  bool got_remaining_time = false;
 
   double progress;
   char buf[SQL_BUF_SIZE];
   std::string wu_name;
   std::string total_speed;
+  std::string remaining_time;
   std::map<uint32_t, Device> devices;
   uint64_t fc_workunit_id;
 
@@ -124,6 +126,13 @@ int handle_trickle(MSG_FROM_HOST &mfh) {
       continue;
     }
 
+    if (xp.parse_string("remaining_time", remaining_time)) {
+      std::cerr << "Succesfully parsed remaining time: " << remaining_time
+                << std::endl;
+      got_remaining_time = true;
+      continue;
+    }
+
     char s1[SQL_BUF_SIZE];
     char s2[SQL_BUF_SIZE];
     char s3[SQL_BUF_SIZE];
@@ -169,7 +178,7 @@ int handle_trickle(MSG_FROM_HOST &mfh) {
   }
 
   /** Check values */
-  if (!got_progress || !got_wu_name || !got_total_speed) {
+  if (!got_progress || !got_wu_name || !got_total_speed || !got_remaining_time) {
     std::cerr << "ERROR: Could not parse all mandatory data." << std::endl;
     return 1;
   }
@@ -208,6 +217,23 @@ int handle_trickle(MSG_FROM_HOST &mfh) {
     boinc_db.close();
     exit(1);
   }
+
+  std::cerr << "Updating workunit remaining time..." << std::endl;
+
+  snprintf(buf, SQL_BUF_SIZE,
+           "UPDATE `fc_workunit` SET `remaining_time` = %" PRIu64
+           " WHERE `id` = %" PRIu64 " LIMIT 1 ;",
+           std::stoull(remaining_time), fc_workunit_id);
+
+  retval = boinc_db.do_query(buf);
+  if (retval) {
+    std::cerr << "Problem with DB query: " << buf << "\nShutting down now."
+              << std::endl;
+    boinc_db.close();
+    exit(1);
+  }
+
+  // -----------------------------------
 
   for (auto &device : devices) {
     // Get device id from fc_device
